src/test/ui/traits/bad-sized.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/bad-sized.rs:4:28
   |
LL |     let x: Vec<dyn Trait + Sized> = Vec::new();
   |                    -----   ^^^^^ additional non-auto trait
   |                    |
   |                    first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Trait + Sized {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error[E0277]: the size for values of type `dyn Trait` cannot be known at compilation time
  --> $DIR/bad-sized.rs:4:12
   |
LL |     let x: Vec<dyn Trait + Sized> = Vec::new();
   |            ^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Trait`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error[E0277]: the size for values of type `dyn Trait` cannot be known at compilation time
  --> $DIR/bad-sized.rs:4:37
   |
LL |     let x: Vec<dyn Trait + Sized> = Vec::new();
   |                                     ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Trait`
note: required by `Vec::<T>::new`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL |     pub const fn new() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the size for values of type `dyn Trait` cannot be known at compilation time
  --> $DIR/bad-sized.rs:4:37
   |
LL |     let x: Vec<dyn Trait + Sized> = Vec::new();
   |                                     ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Trait`
note: required by a bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   |
LL | pub struct Vec<T, #[unstable(feature = "allocator_api", issue = "32838")] A: Allocator = Global> {
   |                ^ required by this bound in `Vec`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0225, E0277.
For more information about an error, try `rustc --explain E0225`.
